[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new-project"
version = "0.1.0"
description = "Minimal Python project scaffold"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "streamlit>=1.34",
  "pandas>=2.2",
  "numpy>=1.26",
  "plotly>=5.22",
  "matplotlib>=3.8",
  "openpyxl>=3.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

